# playground-server

./: .gitignore  Dockerfile  Makefile  pyproject.toml
app/: base.py  settings.py  wsgi.py
app/games/: __init__.py  config.py
app/games/gaps/: README.md  base.py  game.py
app/games/guesser/: README.md  __init__.py  base.py  constants.py  game.py
app/templates/: index.html
app/templates/about/: index.html
app/templates/games/: gaps.html  guesser.html  index.html
app/templates/main/: 404.html  500.html  about.html  base.html  sidebar.html
app/templates/models/: index.html
app/templates/services/: metaflow.html  vpn.html
app/templates/test/: index.html
nginx/: flask-server.conf  iamxox-server.conf  metaflow-server.conf
scripts/: run.sh  startup.sh
