[tool.poetry]
name = "flask-playground"
version = "0.1.0"
description = ""
authors = ["artem.khokhlov"]
readme = "README.md"
packages = [{include = "flask_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0"
flask-bootstrap = "*"
gunicorn = "*"
python-dotenv = "*"
uwsgi = "*"
gensim = "^4.2.0"
flask-session = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
