[tool.poetry]
authors = ["artem.khokhlov"]
description = ""
name = "playground-server"
version = "0.1.0"

[tool.poetry.dependencies]
flask = "^2.0"
flask-bootstrap = "^3.3.7.1"
flask-session = "^0.4.0"
gensim = "^4.2.0"
gunicorn = "^20.1.0"
python = "^3.9"
python-dotenv = "^0.21.0"
uwsgi = "^2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]